fix landscape display on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -343,7 +343,7 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px){
     header .intro-text {
-        padding-top: 150px;
+        padding-top: 230px;
         padding-bottom: 200px;
     }
 
@@ -359,9 +359,9 @@ header .intro-text .intro-heading {
         margin-bottom: 50px;
         text-transform: uppercase;
         font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 84px;
+        font-size: 100px;
         font-weight: 700;
-        line-height: 60px;
+        line-height: 70px;
         opacity: 1;
     }
 }
